fix: navbar shift and mobile 3D box centering

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     min-height: 100vh;
     position: relative;
+    scrollbar-gutter: stable;
 }
 
 
